# WayShade

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
examples/fx_cli/: CMakeLists.txt  effects.cpp  effects.hpp  fx_cli.c  image.cpp  image.hpp  main.cpp  parse.cpp  parse.hpp  pipeline.cpp  pipeline.hpp
examples/gamma/: CMakeLists.txt  gamma.c
examples/wayland-panel/: Cargo.toml  build.rs
examples/wayland-panel/src/: app.rs  backdrop.rs  effects.rs  main.rs
fx/: Cargo.toml  build.rs
fx-sys/: Cargo.toml  build.rs  wrapper.h
fx-sys/tests/: smoke.rs
fx/benches/: effects.rs
fx/examples/: still_image.rs
fx/src/: error.rs  image.rs  lib.rs  pipeline.rs
fx/tests/: integration.rs
halide/: CMakeLists.txt  color_generator.cpp  fx_common.h  gamma_generator.cpp  gaussian_generator.cpp  kawase_generator.cpp  rounded_generator.cpp  shadow_generator.cpp
include/fx/: fx.h
src/: CMakeLists.txt  fx.cpp  fx.map
tests/: CMakeLists.txt  fx_capi_test.c
tests/python/: README.md  fxlib.py  reference.py  samples.py  test_color.py  test_edges.py  test_gamma.py  test_gaussian.py  test_golden.py  test_kawase.py  test_rounded.py  test_shadow.py
