[package]
name = "wayshade-panel"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# default-features off drops the xkbcommon/seat keyboard path (system libxkbcommon
# dep) and SCTK's own calloop glue — we drive calloop ourselves and have no keyboard.
smithay-client-toolkit = { version = "0.19", default-features = false }
wayland-client = "0.31"
calloop = { version = "0.14", features = ["signals"] }
calloop-wayland-source = "0.4"

[[bin]]
name = "wayshade-panel"
path = "src/main.rs"
